# flair

./: Cargo.toml  README.md  openssl.cnf
flair_args/: Cargo.toml
flair_args/src/: lib.rs
flair_auth/: Cargo.toml
flair_auth/src/: lib.rs
flair_data/: Cargo.toml  build.rs
flair_data/src/: main.rs
flair_hyper/: Cargo.toml
flair_hyper/src/: lib.rs
flair_server/: Cargo.toml  build.rs
flair_server/src/: errors.rs  main.rs  messages.rs  search.rs
migrations/: 20230318200025_services.up.sql  20230318200315_hosts.down.sql  20230318200315_hosts.up.sql
proto/: flair_search.proto
src/: client.rs  lib.rs  main.rs
