[package]
name = "flair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustserve = { path = "../rustserve" }
rustserve-platform = { path = "../rustserve-platform" }

http = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.5"

tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
] }

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }

futures = { version = "0.3.1" }

[lib]
name = "flair"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
