[package]
name = "flair_hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustserve = { path = "../../rustserve" }

anyhow = "1.0"

http = "0.2"

hyper = { version = "0.14.19", features = [
  "server",
  "http1",
  "runtime",
] }

tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.5"
