[package]
name = "flair_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustserve = { path = "../../rustserve" }

http = "0.2"

tonic = "0.7"
prost = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.5"

tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
] }

futures = { version = "0.3.1" }

flair_args = { path = "../flair_args" }
flair_hyper = { path = "../flair_hyper" }

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost"] }
